--- a/views/pages/squat.ejs
+++ b/views/pages/squat.ejs
@@ -11,6 +11,7 @@
   <script src="/js/annyang.js"></script>
   <script src="/js/command.js"></script>
   <script>
+  // 음성인식 기능 활성화
     if (annyang) {
       annyang.addCommands(squat_commands);
       annyang.start();
@@ -30,6 +31,7 @@
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+  // squat.js로 인공지능 모델 사용
   <script src="/js/squat.js"></script>
   
 </html>
